fix new password icon position

--- a/src/app/pages/user/register/register.page.scss
+++ b/src/app/pages/user/register/register.page.scss
@@ -242,13 +242,13 @@ app-register {
     text-align: right !important;
   }
 
-  /*.password-icon {
-    font-size:2rem !important;
+  .new-password-icon {
+    font-size: 2rem !important;
     position: relative !important;
-    top: 5px !important;
+    top: 2px !important;
     margin: 0 auto !important;
     width: 15px;
-  }*/
+  }
 
   .ion-input {
     border-radius: var(--border-radius);
