--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -204,7 +204,7 @@
                         </div>
                         <ion-item *ngIf="loginMode === 'email'" lines="full">
                           <ion-input id="newPassword1" [type]="passwordType" formControlName="password" placeholder="Password"></ion-input>
-                          <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
+                          <ion-icon slot="end" [name]="passwordIcon" class="new-password-icon" (click)='hideShowPassword()'></ion-icon>
                         <div tabindex="0"></div></ion-item>
                         <div *ngIf="!emailPassForm.controls.password.pristine && !emailPassForm.controls.password.valid">
                           <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.password.pristine && emailPassForm.controls.password.hasError('required')">
