--- a/src/global.scss
+++ b/src/global.scss
@@ -113,6 +113,10 @@ p {
   z-index: 30000 !important;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 ion-datetime {
   z-index: 30000 !important;
 }
