--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -142,7 +142,7 @@
               {{calendarItem.moment.matrix_string[0][0]}}
             </ion-label>
           </div>
-          <div class="type-col"><ion-badge color="button1" class="ion-text-wrap">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge></div>
+          <ion-badge color="button1" class="type-col ion-text-wrap" slot="end">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge>
         <div tabindex="0"></div></ion-item>
       </ion-virtual-scroll>
     </ion-grid>
@@ -154,7 +154,7 @@
           <div style="font-size: 14px" class="ion-text-wrap">Enter a Name for the {{selectedMoments[0].resource['en-US'].value[0]}}</div>
         <div tabindex="0"></div></ion-item>
         <ion-item lines="none">
-          <div class="moment-label" slot="start"><ion-icon class="side-icon" color="grey" name="brush"></ion-icon></div>
+          <div slot="start"><ion-icon class="side-icon" color="grey" name="brush"></ion-icon></div>
           <ion-textarea [(ngModel)]="selectedMoments[0].matrix_string[0][0]" rows="1" [minRows]="1" [maxRows]="2" autosize></ion-textarea>
         <div tabindex="0"></div></ion-item>
       </ion-col>
