--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -68,7 +68,7 @@
   <ion-toolbar id="permissionBar" *ngIf="showSpecialAccess && loadStatus && setupPermissionCompleted">
     <!--Invitation Section-->
     <ion-item-sliding *ngIf="(participant_type === 2) && token">
-      <ion-item id="accept-invitation" (click)="acceptInvitation($event)" lines="none">
+      <ion-item id="accept-invitation" (click)="acceptInvitation($event)" lines="none" class="cursor-pointer">
         <ion-icon name="mail-open" slot="start" color="danger"></ion-icon>
         <div class="ion-text-wrap">
           <ion-label class="ion-margin-top">Accept Invitation</ion-label>
@@ -83,7 +83,7 @@
       </ion-item-options>
     </ion-item-sliding>
     <ion-item-sliding *ngIf="!hasLeaderAccess && (participant_type === 4) && token">
-      <ion-item (click)="acceptInvitation($event)" lines="none">
+      <ion-item (click)="acceptInvitation($event)" lines="none"  class="cursor-pointer">
         <ion-icon name="mail-open" slot="start" color="danger"></ion-icon>
         <div class="ion-text-wrap">
           <ion-label class="ion-margin-top">Accept Invitation</ion-label>
@@ -98,7 +98,7 @@
       </ion-item-options>
     </ion-item-sliding>
     <ion-item-sliding *ngIf="!hasOrganizerAccess && (this.participant_type === 3) && token">
-      <ion-item (click)="acceptInvitation($event)" lines="none">
+      <ion-item (click)="acceptInvitation($event)" lines="none"  class="cursor-pointer">
         <ion-icon name="mail-open" slot="start" color="danger"></ion-icon>
         <div class="ion-text-wrap">
           <ion-label class="ion-margin-top">Accept Invitation</ion-label>
@@ -124,7 +124,7 @@
     <div tabindex="0"></div></ion-item>
     <div *ngIf="!joinDisabled">
       <!--Already Joined-->
-      <ion-item *ngIf="hasParticipantAccess && !hasOrganizerAccess && !hasLeaderAccess" (click)="moreParticipantOptions()" lines="none" id="toggle-more-options">
+      <ion-item *ngIf="hasParticipantAccess && !hasOrganizerAccess && !hasLeaderAccess" (click)="moreParticipantOptions()" lines="none" id="toggle-more-options" class="cursor-pointer">
         <ion-icon name="person" slot="start" color="danger"></ion-icon>
         <div class="ion-text-wrap message-container">
           <ion-label class="ion-margin-top">You are a {{participantLabel}}</ion-label>
@@ -133,7 +133,7 @@
         <ion-icon name="chevron-down-outline" color="primary" slot="end"></ion-icon>
       <div tabindex="0"></div></ion-item>
       <!--Not yet Joined - permission check-->
-      <ion-item id="click-to-join" *ngIf="authService.token && !token && !hasParticipantAccess && !hasOrganizerAccess && !hasLeaderAccess" (click)="joinActivity()" lines="none">
+      <ion-item id="click-to-join" *ngIf="authService.token && !token && !hasParticipantAccess && !hasOrganizerAccess && !hasLeaderAccess" (click)="joinActivity()" lines="none" class="cursor-pointer">
         <ion-icon name="person" slot="start" color="danger"></ion-icon>
         <ion-label class="ion-margin-top">Click to join {{moment.resource['en-US'].value[0]}}</ion-label>
         <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
