--- a/src/app/pages/connect/myconversations/myconversations.page.html
+++ b/src/app/pages/connect/myconversations/myconversations.page.html
@@ -42,7 +42,7 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="createNewChat()" [disabled]="!finishedLoading" color="grey">
+      <ion-button id="createNewChatButton" (click)="createNewChat()" [disabled]="!finishedLoading" color="grey">
         <ion-icon name="add"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -196,4 +196,3 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-
