replace all ion-select popover with alert to avoid safari 14 bug

--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -199,7 +199,7 @@
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none"> <!--Default Tab-->
               <ion-label style="width: 90%" margin-left="20px" color="grey" slot="start">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][2]}} {{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][1]}}</ion-label>
-              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="popover" [(ngModel)]="moment.matrix_number[i][0]" slot="end">
+              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="alert" [(ngModel)]="moment.matrix_number[i][0]" slot="end">
                 <ion-select-option *ngFor="let tabId of moment.matrix_number[i] | slice: 5; index as k" [value]="tabId">{{moment.matrix_string[i][k]}}</ion-select-option> <!--Tab-->
               </ion-select>
             <div tabindex="0"></div></ion-item>
@@ -321,7 +321,7 @@
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none"> <!--Response Type-->
               <ion-label style="width: 90%" slot="start">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][20]}}</ion-label>
-              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="popover" [(ngModel)]="moment.matrix_number[i][5]" slot="end" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][21]">
+              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="alert" [(ngModel)]="moment.matrix_number[i][5]" slot="end" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][21]">
                 <ion-select-option [value]=0>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][21]}}</ion-select-option> <!--Default: Collaborative-->
                 <ion-select-option [value]=1>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][22]}}</ion-select-option> <!--Private-->
               </ion-select>
@@ -479,7 +479,7 @@
               <ion-label class="moment-input">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][0]}}</ion-label>
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none" *ngFor="let reminder of reminders; index as j">
-              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" style="padding-left: 0;" id="custom-select" interface="popover" [(ngModel)]="reminders[j]">
+              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" style="padding-left: 0;" id="custom-select" interface="alert" [(ngModel)]="reminders[j]">
                 <ion-select-option value="0">At time of event</ion-select-option>
                 <ion-select-option value="5">5 min before</ion-select-option>
                 <ion-select-option value="10">10 min before</ion-select-option>
@@ -625,7 +625,7 @@
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none"> <!--Response Type-->
               <ion-label style="width: 90%" slot="start">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][6]}}</ion-label>
-              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="popover" [(ngModel)]="moment.matrix_number[i][1]" slot="end">
+              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" interface="alert" [(ngModel)]="moment.matrix_number[i][1]" slot="end">
                 <ion-select-option [value]=0>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][7]}}</ion-select-option> <!--Private-->
                 <ion-select-option [value]=1>{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(item)][8]}}</ion-select-option> <!--Collaborative-->
               </ion-select>
