--- a/src/app/pages/feature/customreminder-popover/customreminder-popover.page.html
+++ b/src/app/pages/feature/customreminder-popover/customreminder-popover.page.html
@@ -3,7 +3,7 @@
   <ion-list>
     <ion-item no-lines class="centered">
       <ion-input style="width: 20%" slot="start" [(ngModel)]="timeValue" placeholder="10"></ion-input>
-      <ion-select [interfaceOptions]="{cssClass: 'level-15'}" style="width: 80%" slot="end" interface="popover" [(ngModel)]="timeUnit">
+      <ion-select [interfaceOptions]="{cssClass: 'level-15'}" style="width: 80%" slot="end" interface="alert" [(ngModel)]="timeUnit">
         <ion-select-option value="m">min<span *ngIf="timeValue > 1">s</span> before</ion-select-option>
         <ion-select-option value="h">hour<span *ngIf="timeValue > 1">s</span>  before</ion-select-option>
         <ion-select-option value="d">day<span *ngIf="timeValue > 1">s</span>  before</ion-select-option>
