--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -212,10 +212,6 @@
               </ion-buttons>
             <div tabindex="0"></div></ion-item>
           </div>
-          <!--<ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(null)">
-            <span class="content-count"><ion-icon name="add"></ion-icon></span>
-            <ion-label class="moment-input" *ngIf="moment && resource">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
-          <div tabindex="0"></div></ion-item>-->
         </ion-card-content>
       </ion-card>
       <ion-item hidden>
@@ -280,7 +276,7 @@
         <ion-item *ngFor="let content of schedule.child_moments; let j = index;">
           <ion-reorder slot="start" class="ion-no-margin"><ion-icon name="menu" color="grey"></ion-icon></ion-reorder>
           <div class="content-count">{{j+1}}.</div>
-          <ion-badge class="ion-margin-end" *ngIf="content.resource">{{content.resource['en-US'].value[0]}}</ion-badge>
+          <ion-badge class="ion-float-start ion-margin-end" *ngIf="content.resource">{{content.resource['en-US'].value[0]}}</ion-badge>
           <!--<ion-input class="moment-input" type="text" [(ngModel)]="content.matrix_string[0][0]" [hidden]="content._id"></ion-input>-->
           <span class="moment-input" *ngIf="content.matrix_string">{{content.matrix_string[0][0]}}</span>
           <ion-buttons slot="end" class="ion-no-margin">
