--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
@@ -13,8 +13,6 @@ app-feature-schedule {
   }
 
   .moment-input {
-    //width: 90%;
-    //float: left;
     opacity: 0.5;
     padding: 5px 0;
   }
@@ -55,7 +53,7 @@ app-feature-schedule {
 
   .content-count {
     margin: 0 10px;
-    width: 10%;
+    min-width: 30px;
   }
 
   .content-date {
