--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
@@ -52,8 +52,8 @@ app-feature-schedule {
   }
 
   .content-count {
-    margin: 0 10px;
-    min-width: 30px;
+    margin: 0 2px 0 10px;
+    min-width: 24px;
   }
 
   .content-date {
